[package]
name = "repcp"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/raftario/repcp"
repository = "https://github.com/raftario/repcp"
readme = "README.md"
description = "Randomized Encrypted P2P Chat Protocol"

[dependencies]
